--- a/themes/next/source/css/_common/components/sidebar/sidebar-author.styl
+++ b/themes/next/source/css/_common/components/sidebar/sidebar-author.styl
@@ -5,6 +5,10 @@
   max-width: $site-author-image-width;
   height: $site-author-image-height;
   border: $site-author-image-border-width solid $site-author-image-border-color;
+  /*头像圆形*/
+  border-radius: 80px;
+  -webkit-border-radius: 80px;
+  -moz-border-radius: 80px;
 }
 
 .site-author-name {
@@ -19,4 +23,11 @@
   text-align: $site-description-align;
   font-size: $site-description-font-size;
   color: $site-description-color;
+}
+
+img:hover {
+  /* 鼠标经过头像旋转360度 */
+  -webkit-transform: rotateZ(360deg);
+  -moz-transform: rotateZ(360deg);
+  transform: rotateZ(360deg);
 }
